# rust-data-structures

./: Cargo.toml  README.md
src/lists/: linked_list.rs
src/trees/: bst.rs
